--- a/WallKickJumpGame.CSharp.csproj
+++ b/WallKickJumpGame.CSharp.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Assets\Script\Generators\MapGenerator.cs" />
     <Compile Include="Assets\Script\Generators\ObstacleGenerator.cs" />
     <Compile Include="Assets\Script\Managers\ButtonManager.cs" />
+    <Compile Include="Assets\Script\Objects\Obstacle.cs" />
     <Compile Include="Assets\Script\UI\WKJGButton.cs" />
     <Compile Include="Assets\Script\Utility\Debug\DebugInformation.cs" />
     <Compile Include="Assets\Script\Utility\FPSCounter.cs" />
