--- a/WallKickJumpGame.CSharp.csproj
+++ b/WallKickJumpGame.CSharp.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>Android:13</UnityBuildTarget>
     <UnityVersion>5.4.0f3</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -96,6 +94,7 @@
     <Compile Include="Assets\Script\Generators\ObstacleGenerator.cs" />
     <Compile Include="Assets\Script\Managers\ButtonManager.cs" />
     <Compile Include="Assets\Script\Managers\GameManager.cs" />
+    <Compile Include="Assets\Script\Managers\ResultManager.cs" />
     <Compile Include="Assets\Script\Managers\ScoreManager.cs" />
     <Compile Include="Assets\Script\Objects\Item.cs" />
     <Compile Include="Assets\Script\Objects\Obstacle.cs" />
