--- a/WallKickJumpGame.CSharp.csproj
+++ b/WallKickJumpGame.CSharp.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Assets\Script\Actors\Player\PlayerTurn.cs" />
     <Compile Include="Assets\Script\Actors\Player\PlayerWallKickJump.cs" />
     <Compile Include="Assets\Script\Cameras\MainCamera.cs" />
+    <Compile Include="Assets\Script\Generators\ItemGenerator.cs" />
     <Compile Include="Assets\Script\Generators\MapGenerator.cs" />
     <Compile Include="Assets\Script\Generators\ObstacleGenerator.cs" />
     <Compile Include="Assets\Script\Managers\ButtonManager.cs" />
