--- a/WallKickJumpGame.CSharp.csproj
+++ b/WallKickJumpGame.CSharp.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Assets\Script\Actors\Player\PlayerDamage.cs" />
     <Compile Include="Assets\Script\Actors\Player\PlayerFall.cs" />
     <Compile Include="Assets\Script\Actors\Player\PlayerState.cs" />
+    <Compile Include="Assets\Script\Actors\Player\PlayerStick.cs" />
     <Compile Include="Assets\Script\Actors\Player\PlayerTurn.cs" />
     <Compile Include="Assets\Script\Actors\Player\PlayerWallKickJump.cs" />
     <Compile Include="Assets\Script\Cameras\MainCamera.cs" />
