--- a/WallKickJumpGame.CSharp.csproj
+++ b/WallKickJumpGame.CSharp.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Assets\LINQtoGameObject\Scripts\GameObjectExtensions.Traverse.cs" />
     <Compile Include="Assets\Script\Actors\Player\PlayerAirMove.cs" />
     <Compile Include="Assets\Script\Actors\Player\PlayerDamage.cs" />
+    <Compile Include="Assets\Script\Actors\Player\PlayerDoubleJump.cs" />
     <Compile Include="Assets\Script\Actors\Player\PlayerFall.cs" />
     <Compile Include="Assets\Script\Actors\Player\PlayerState.cs" />
     <Compile Include="Assets\Script\Actors\Player\PlayerStick.cs" />
